# AdaptiveKuramoto

./: .gitignore  README.md  requirements.txt
AdaptiveKuramotoModel/: kuramoto.py
AdaptiveKuramotoOscillators/: AdaptiveKuramotoOscillators.workspace  Makefile
KuramotoModel/: CMakeLists.txt  discrete_kuramoto.cpp  discrete_kuramoto.h  main  main.cpp  makefile.mk  solvers.cpp  solvers.h
KuramotoModel/Eigen/: CMakeLists.txt
KuramotoModel/Examples/: examples.cpp  examples.h
KuramotoModel/examples/: CMakeLists.txt  cl_examples.cpp  cl_examples.h  cl_objects.h  examples.cpp  examples.h  iofunctions.h
KuramotoModel/examples/headers/: CMakeLists.txt  cl_examples.h  cl_examples_cos.h  cl_examples_ring.h  density_functions.h  discrete_graphs.h  ds_examples.h  ds_examples_ring.h  iofunctions.h
KuramotoModel/examples/src/: CMakeLists.txt  cl_examples.cpp  cl_examples_cos.cpp  cl_examples_ring.cpp  ds_examples.cpp  ds_examples_ring.cpp
KuramotoModel/include/: CMakeLists.txt  abstract_kuramoto.cpp  abstract_kuramoto.h  adaptive_kuramoto.cpp  adaptive_kuramoto.h  continuum_limit.cpp  continuum_limit.h  runge_kutta.h  solvers.h
KuramotoModel/include/Analysis/: CMakeLists.txt  analysis.cpp  continuous_extension.cpp
KuramotoModel/include/ContinuumModel/: CMakeLists.txt  continuum_limit.cpp
KuramotoModel/include/DiscreteModel/: CMakeLists.txt  abstract_kuramoto.cpp  adaptive_kuramoto.cpp
KuramotoModel/include/Headers/: CMakeLists.txt  abstract_continuum_limit.h  abstract_kuramoto.h  adaptive_kuramoto.h  analysis.h  continuous_extension.h  continuum_limit.h  integral_solver.h  integrators.h  iofunctions.h  runge_kutta.h  solvers.h
KuramotoModel/txt_outputs/: a0_3p_b0_53p.txt  contlim_clustering_file.txt  order_parameter_file.txt  phases_file.txt
KuramotoModel/visualization/: CMakeLists.txt  matplotlibcpp.h  visualization.cpp  visualization.h
Python/: examples.py  visualize.py
Visualization/: adaptive_kuramoto_solver.py  analysis.py  (+9 more)
(+10 files in other folders)
