cmake_minimum_required(VERSION 3.20)
project(KuramotoModel)

add_executable(main)
target_sources(main PRIVATE "main.cpp")
target_include_directories(main PRIVATE "${PROJECT_SOURCE_DIR}")
add_subdirectory("include")
add_subdirectory("Eigen")
install(TARGETS main)
# set(CMAKE_C_FLAGS_DEBUG "-g -DDEBUG")
set(CMAKE_CXX_FLAGS_DEBUG "-g -DDEBUG")
